--- a/CENG499 - Machine Learning/README
+++ b/CENG499 - Machine Learning/README
@@ -1,1 +1,6 @@
-try
+** CENG 499 - Introduction to Machine Learning
+
+*** HW1 is about Artificial Neural Network to classify CIFAR-32 dataset images.
+*** HW2 includes implementations of K-Nearest-Neigbor, K-Means and Hierarchical Agglomerative Clustering algorithms.
+*** HW3 includes two part: Using sk-learn for SVM and implementation of ID3 algorithm for Decision Trees.
+*** HW4
